fix: header z-index

--- a/src/styles/partials/header.scss
+++ b/src/styles/partials/header.scss
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 10;
 
   .header-container {
     height: 70px;
